XLT-117: add on-chain tracking with anchor program
- Add Anchor program for on-chain airdrop tracking
- Store AirdropRecord PDAs for each wallet/eth pair
- Store AirdropRun PDAs with run metadata and totals
- Add GlobalState PDA for run counter management
- Create TypeScript client for on-chain operations
- Update executor to use on-chain runs and snapshots
- Simplify Prisma schema (runs now on-chain, DB for tx logs only)
- Add @coral-xyz/anchor dependency

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,9 @@ DATABASE_URL=postgres://user:password@localhost:5432/xnm_airdrop
 # Token mint address for XNM token (REQUIRED)
 TOKEN_MINT=your_token_mint_address_here
 
+# Airdrop tracker program ID (REQUIRED - deploy program first)
+AIRDROP_TRACKER_PROGRAM_ID=your_program_id_here
+
 # Solana RPC endpoint (REQUIRED)
 RPC_ENDPOINT=https://rpc.testnet.x1.xyz
 
