--- a/Anchor.toml
+++ b/Anchor.toml
@@ -1,22 +1,28 @@
+[toolchain]
+anchor_version = "0.32.1"
+
 [features]
 seeds = false
 skip-lint = false
 
 [programs.localnet]
-xnm_airdrop_tracker = "11111111111111111111111111111111"
+delegation_program = "X1dpTaMXkdEHQwhUk5oidxK9RXer8WoUCinWTyRmVjQ"
 
-[programs.devnet]
-xnm_airdrop_tracker = "11111111111111111111111111111111"
+[programs.testnet]
+delegation_program = "X1DPvnLXekvd6EtDsPVqahzhziKx3Zj1z8WkD93xebg"
 
 [programs.mainnet]
-xnm_airdrop_tracker = "11111111111111111111111111111111"
+xnm_airdrop_tracker = "Bsh6Bua2msqhcwB5E2ZmASmpXuEB2ZxEZE18VRwH8YTw"
 
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "devnet"
+cluster = "https://rpc.mainnet.x1.xyz"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
+deploy = "anchor deploy"
+deploy-localnet = "anchor deploy --provider.cluster http://localhost:8899 --program-id target/deploy/delegation_program-keypair-localnet.json"
+deploy-testnet = "anchor deploy --provider.cluster https://rpc.testnet.x1.xyz --program-id target/deploy/delegation_program-keypair-testnet.json"
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
