--- a/programs/xnm-airdrop-tracker/Cargo.toml
+++ b/programs/xnm-airdrop-tracker/Cargo.toml
@@ -14,6 +14,8 @@ no-idl = []
 no-log-ix-name = []
 cpi = ["no-entrypoint"]
 default = []
+idl-build = ["anchor-lang/idl-build"]
 
 [dependencies]
-anchor-lang = "0.30.1"
+anchor-lang = "0.32.1"
+indexmap = "=2.7.1"
