--- a/package.json
+++ b/package.json
@@ -13,18 +13,13 @@
     "format:check": "prettier --check \"src/**/*.ts\" \"tests/**/*.ts\"",
     "test": "vitest run",
     "test:watch": "vitest",
-    "db:generate": "prisma generate",
-    "db:migrate": "prisma migrate dev",
-    "db:migrate:deploy": "prisma migrate deploy",
-    "db:push": "prisma db push",
-    "db:studio": "prisma studio"
+    "webapp:dev": "npm run dev --prefix webapp"
   },
   "author": "",
   "license": "ISC",
   "description": "XNM token airdrop script with on-chain tracking and delta calculations",
   "dependencies": {
     "@coral-xyz/anchor": "^0.32.1",
-    "@prisma/client": "^6.2.1",
     "@solana/spl-token": "^0.4.13",
     "@solana/web3.js": "^1.98.2",
     "dotenv": "^17.2.0",
@@ -38,7 +33,6 @@
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "prettier": "^3.4.2",
-    "prisma": "^6.2.1",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3",
     "vitest": "^2.1.8"
