Update gitignore to only track target/types and target/idl

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ Thumbs.db
 # Test coverage
 coverage/
 
-# Prisma
-prisma/*.db
-prisma/*.db-journal
+# Rust/Anchor build output (keep types and idl)
+target/*
+!target/types/
+!target/idl/
