Update .env.example with all environment variables

--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,74 @@
 # XNM Airdrop Configuration
 
-# PostgreSQL database URL (REQUIRED)
-DATABASE_URL=postgres://user:password@localhost:5432/xnm_airdrop
+# =============================================================================
+# REQUIRED
+# =============================================================================
 
-# Token mint address for XNM token (REQUIRED)
-TOKEN_MINT=your_token_mint_address_here
-
-# Airdrop tracker program ID (REQUIRED - deploy program first)
-AIRDROP_TRACKER_PROGRAM_ID=your_program_id_here
-
-# Solana RPC endpoint (REQUIRED)
+# Solana RPC endpoint
 RPC_ENDPOINT=https://rpc.testnet.x1.xyz
 
-# Path to keypair file for the payer wallet (REQUIRED)
+# Path to keypair file for the payer wallet
 KEYPAIR_PATH=./payer-keypair.json
 
-# Token decimals (default: 9)
-DECIMALS=9
+# Airdrop tracker program ID (deploy program first)
+AIRDROP_TRACKER_PROGRAM_ID=JAzubT5NSiyRkLgaFRTkrdLGzzMb57CVhMhdDCiqoRu6
 
-# Set to true for testing, false for actual airdrop
+# =============================================================================
+# TOKEN CONFIGURATION
+# =============================================================================
+
+# Which tokens to airdrop (comma-separated: xnm, xblk, xuni)
+TOKEN_TYPES=xnm,xblk,xuni
+
+# Default token program: 'token' (SPL Token) or 'token-2022' (Token Extensions)
+TOKEN_PROGRAM=token
+
+# XNM Token
+XNM_TOKEN_MINT=your_xnm_token_mint_here
+XNM_DECIMALS=9
+# XNM_TOKEN_PROGRAM=token  # Override per-token if different from default
+
+# XBLK Token
+XBLK_TOKEN_MINT=your_xblk_token_mint_here
+XBLK_DECIMALS=9
+# XBLK_TOKEN_PROGRAM=token
+
+# XUNI Token
+XUNI_TOKEN_MINT=your_xuni_token_mint_here
+XUNI_DECIMALS=9
+# XUNI_TOKEN_PROGRAM=token-2022  # Example: XUNI uses Token-2022
+
+# =============================================================================
+# AIRDROP SETTINGS
+# =============================================================================
+
+# Set to true for testing (no actual transfers)
 DRY_RUN=true
 
 # API endpoint for fetching miner data
 API_ENDPOINT=https://xenblocks.io/v1/leaderboard?limit=10000&require_sol_address=true
+
+# Minimum SOL balance required for transaction fees (in SOL)
+MIN_FEE_BALANCE=10
+
+# Number of recipients per batch
+BATCH_SIZE=3
+
+# Number of concurrent transactions
+CONCURRENCY=4
+
+# Fee buffer multiplier for compute unit estimation (1.2 = 20% buffer)
+FEE_BUFFER_MULTIPLIER=1.2
+
+# Priority fee in microlamports (optional)
+# PRIORITY_FEE=1000
+
+# =============================================================================
+# LOGGING
+# =============================================================================
+
+# Log level: trace, debug, info, warn, error, fatal
+LOG_LEVEL=info
+
+# Node environment: development, production
+NODE_ENV=development
