Update web/.env.example with all environment variables

--- a/web/.env.example
+++ b/web/.env.example
@@ -1,3 +1,13 @@
+# Web App Configuration
+
+# Solana RPC endpoint
 VITE_RPC_ENDPOINT=https://rpc.testnet.x1.xyz
+
+# Airdrop tracker program ID
 VITE_PROGRAM_ID=JAzubT5NSiyRkLgaFRTkrdLGzzMb57CVhMhdDCiqoRu6
+
+# Block explorer URL
 VITE_EXPLORER_URL=https://explorer.x1.xyz
+
+# Leaderboard API endpoint (for pending deltas calculation)
+VITE_LEADERBOARD_API=https://xenblocks.io/v1/leaderboard?limit=10000&require_sol_address=true
