Add pagination support for leaderboard API fetching
- Fetch miners in chunks of 1000 using limit/offset
- Keep fetching until no more records returned
- Update .env.example files with simpler base URL

--- a/.env.example
+++ b/.env.example
@@ -45,8 +45,8 @@ XUNI_DECIMALS=9
 # Set to true for testing (no actual transfers)
 DRY_RUN=true
 
-# API endpoint for fetching miner data
-API_ENDPOINT=https://xenblocks.io/v1/leaderboard?limit=10000&require_sol_address=true
+# API endpoint for fetching miner data (pagination handled automatically)
+API_ENDPOINT=https://xenblocks.io/v1/leaderboard?require_sol_address=true
 
 # Minimum SOL balance required for transaction fees (in SOL)
 MIN_FEE_BALANCE=10
