--- a/web/.env.example
+++ b/web/.env.example
@@ -10,4 +10,4 @@ VITE_PROGRAM_ID=JAzubT5NSiyRkLgaFRTkrdLGzzMb57CVhMhdDCiqoRu6
 VITE_EXPLORER_URL=https://explorer.x1.xyz
 
 # Leaderboard API endpoint (for pending deltas calculation)
-VITE_LEADERBOARD_API=https://xenblocks.io/v1/leaderboard?limit=10000&require_sol_address=true
+VITE_LEADERBOARD_API=https://xenblocks.io/v1/leaderboard?require_sol_address=true
