--- a/web/package.json
+++ b/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "xnm-airdrop-stats",
+  "name": "xenblocks-airdrop-web",
   "private": true,
   "version": "0.0.1",
   "type": "module",
