Add native XNT airdrop support with on-chain tracking

--- a/.env.example
+++ b/.env.example
@@ -64,6 +64,21 @@ FEE_BUFFER_MULTIPLIER=1.2
 # PRIORITY_FEE=1000
 
 # =============================================================================
+# NATIVE TOKEN AIRDROP
+# =============================================================================
+
+# Enable native token (XNT) airdrop for new recipients
+# When enabled, sends a one-time native token amount to first-time recipients
+NATIVE_AIRDROP_ENABLED=false
+
+# Amount of native tokens to airdrop (in XNT, e.g., 1 = 1 XNT)
+NATIVE_AIRDROP_AMOUNT=1
+
+# Minimum XNM balance required to receive native airdrop (in XNM tokens)
+# Only recipients with at least this much XNM will receive native tokens
+NATIVE_AIRDROP_MIN_XNM=10000
+
+# =============================================================================
 # LOGGING
 # =============================================================================
 
