XLT-117: Migrate to TypeScript with on-chain tracking (#3)
* XLT-117: migrate to typescript with prisma and monthly delta support

- Convert codebase from JavaScript to TypeScript with strict mode
- Add Prisma ORM with normalized PostgreSQL schema:
  - wallets, eth_addresses, wallet_eth_mappings tables
  - airdrop_runs, airdrop_snapshots, airdrop_transactions tables
- Implement snapshot-based delta calculations for monthly airdrops
- Add ESLint (flat config), Prettier, and Vitest for testing
- Add 28 unit tests for delta calculation and amount formatting
- Support --mode=full and --mode=delta CLI flags
- Remove JSON file state management in favor of database

* XLT-117: add on-chain tracking with anchor program

- Add Anchor program for on-chain airdrop tracking
- Store AirdropRecord PDAs for each wallet/eth pair
- Store AirdropRun PDAs with run metadata and totals
- Add GlobalState PDA for run counter management
- Create TypeScript client for on-chain operations
- Update executor to use on-chain runs and snapshots
- Simplify Prisma schema (runs now on-chain, DB for tx logs only)
- Add @coral-xyz/anchor dependency

* XLT-117: simplify postgresql schema with wallet_pair table

- Combine Wallet, EthAddress, WalletEthMapping into single wallet_pair table
- Use snake_case for table names (wallet_pair, airdrop_run, airdrop_transaction)
- AirdropTransaction references WalletPair via foreign key
- On-chain PDAs remain source of truth for wallet data

* XLT-117: remove run type - all runs now use delta logic

Simplify the airdrop system by removing the full/delta run type distinction.
All runs now use delta logic: if no existing record for a wallet pair exists,
the delta equals the total balance (total - 0).

* XLT-117: add multi-token support (xnm, xblk) with upgradable on-chain records

- Update AirdropRecord struct with xnm_airdropped, xblk_airdropped fields
- Add reserved space (6 u64 slots) for future token support
- Add TOKEN_TYPE env var to select which token to aird

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,35 @@
-/.env
-/.idea/
+# Environment
+.env
+
+# Dependencies
+node_modules/
+
+# Build output
+dist/
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Logs
+*.log
+airdrop-log.json
+airdrop-failures.json
+
+# Keys
+*-keypair.json
+*.pem
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Test coverage
+coverage/
+
+# Rust/Anchor build output (keep types and idl)
+target/*
+!target/types/
+!target/idl/
