--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,89 @@
 # XNM Airdrop Configuration
 
-# Token mint address for XNM token (REQUIRED)
-TOKEN_MINT=your_token_mint_address_here
+# =============================================================================
+# REQUIRED
+# =============================================================================
 
 # Solana RPC endpoint
 RPC_ENDPOINT=https://rpc.testnet.x1.xyz
 
-# Token decimals (6 for X1 network)
-DECIMALS=6
+# Path to keypair file for the payer wallet
+KEYPAIR_PATH=./payer-keypair.json
 
-# Set to true for testing, false for actual airdrop
+# Airdrop tracker program ID (deploy program first)
+AIRDROP_TRACKER_PROGRAM_ID=JAzubT5NSiyRkLgaFRTkrdLGzzMb57CVhMhdDCiqoRu6
+
+# =============================================================================
+# TOKEN CONFIGURATION
+# =============================================================================
+
+# Which tokens to airdrop (comma-separated: xnm, xblk, xuni)
+TOKEN_TYPES=xnm,xblk,xuni
+
+# Default token program: 'token' (SPL Token) or 'token-2022' (Token Extensions)
+TOKEN_PROGRAM=token
+
+# XNM Token
+XNM_TOKEN_MINT=your_xnm_token_mint_here
+XNM_DECIMALS=9
+# XNM_TOKEN_PROGRAM=token  # Override per-token if different from default
+
+# XBLK Token
+XBLK_TOKEN_MINT=your_xblk_token_mint_here
+XBLK_DECIMALS=9
+# XBLK_TOKEN_PROGRAM=token
+
+# XUNI Token
+XUNI_TOKEN_MINT=your_xuni_token_mint_here
+XUNI_DECIMALS=9
+# XUNI_TOKEN_PROGRAM=token-2022  # Example: XUNI uses Token-2022
+
+# =============================================================================
+# AIRDROP SETTINGS
+# =============================================================================
+
+# Set to true for testing (no actual transfers)
 DRY_RUN=true
 
-# Log files for tracking state
-LOG_FILE=./airdrop-log.json
-FAIL_FILE=./airdrop-failures.json
+# API endpoint for fetching miner data (pagination handled automatically)
+API_ENDPOINT=https://xenblocks.io/v1/leaderboard?require_sol_address=true
 
-# Path to keypair file for the payer wallet
-KEYPAIR_PATH=~/.config/solana/your-keypair.json
+# Minimum SOL balance required for transaction fees (in SOL)
+MIN_FEE_BALANCE=10
 
-# API endpoint for fetching miner data
-API_ENDPOINT=https://xenblocks.io/v1/leaderboard?limit=10000&require_sol_address=true
+# Number of recipients per batch
+BATCH_SIZE=3
+
+# Number of concurrent transactions
+CONCURRENCY=4
+
+# Fee buffer multiplier for compute unit estimation (1.2 = 20% buffer)
+FEE_BUFFER_MULTIPLIER=1.2
+
+# Priority fee in microlamports (optional)
+# PRIORITY_FEE=1000
+
+# =============================================================================
+# NATIVE TOKEN AIRDROP
+# =============================================================================
+
+# Enable native token (XNT) airdrop for new recipients
+# When enabled, sends a one-time native token amount to first-time recipients
+NATIVE_AIRDROP_ENABLED=false
+
+# Amount of native tokens to airdrop (in XNT, e.g., 1 = 1 XNT)
+NATIVE_AIRDROP_AMOUNT=1
+
+# Minimum XNM balance required to receive native airdrop (in XNM tokens)
+# Only recipients with at least this much XNM will receive native tokens
+NATIVE_AIRDROP_MIN_XNM=10000
+
+# =============================================================================
+# LOGGING
+# =============================================================================
+
+# Log level: trace, debug, info, warn, error, fatal
+LOG_LEVEL=info
+
+# Node environment: development, production
+NODE_ENV=development
