Add check script and improve logger output formatting
Add typecheck and unified check scripts to package.json. Configure
pino logger to strip pid/hostname, use ISO timestamps, and output
level labels instead of numeric values.

--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "lint:fix": "eslint src/ --fix",
     "format": "prettier --write \"src/**/*.ts\" \"tests/**/*.ts\"",
     "format:check": "prettier --check \"src/**/*.ts\" \"tests/**/*.ts\"",
+    "typecheck": "tsc --noEmit",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "check": "npm run format && npm run lint && npm run typecheck && npm run test"
   },
   "author": "",
   "license": "ISC",
